--- a/index.html
+++ b/index.html
@@ -464,7 +464,11 @@
         <!-- form -->
         <form class="form">
 
-          <b class="form-title">Leave your contacts and we will call you back</b>
+
+<div class="b-wrap">
+  <b class="form-title">Leave your contacts and we will call you back</b>
+</div>
+          
 
           <div class="form-field">
             <label for="name">Name</label>
@@ -501,7 +505,7 @@
             >
           </div>
 
-          <button type="submit">Send</button>
+          <button type="submit" class="button hero-button">Send</button>
         </form>
       </div>
     </div>
