--- a/portfolio.html
+++ b/portfolio.html
@@ -318,7 +318,7 @@
         </div>
 
         <div class="media-container">
-          <h4 class="media-header">Social media</h4>
+          <p class="media-header">Social media</p>
           <ul class="footer-icon-list list">
             <li class="footer-icon-item">
               <a href="" class="footer-icon-link">
@@ -349,6 +349,20 @@
               </a>
             </li>
           </ul>
+        </div>
+
+        <div class="subscribe-container">
+          <p class="media-header">Subscribe</p>
+
+          <div class="form-wrap">
+            <input type="email" name="email" placeholder="E-mail" />
+            <button type="submit" class="submit-button">
+              Subscribe
+              <svg width="24px" height="24px" class="submit-icon">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
